# notation

./: .gitignore  LICENSE  README.md
Frameworks/FrameworksApple/: .gitignore  README.md  download.sh
Frameworks/FrameworksApple/ZipArchive.xcframework/: Info.plist
Frameworks/kern/: Enum.def  EnumWithString.def  ForwardDeclare.h  GeneralMidi.h  IDType.h  StringDistance.h  TargetOs.h  Time.h
Frameworks/libmusicxml/guido/: xml2guidovisitor.cpp
Frameworks/libmusicxml/interface/: libmusicxml.h
Frameworks/libmusicxml/operations/: transposition.h
Frameworks/libmusicxml/parser/: xmllex.c++
Frameworks/phmap/parallel_hashmap/: phmap_bits.h
Notation-Sourcecode/Backend/: DrawableColors.h  DrawableContext.cc  DrawableContext.h  DrawableLayer.cc  DrawableLayer.h  DrawableLayerFactory.cc  DrawableLayerFactory.h
Notation-Sourcecode/Backend/Linux/: DrawableContextLinux.cc  DrawableContextLinux.h  DrawableLayerFactoryLinux.cc  DrawableLayerFactoryLinux.h  DrawableLayerLinux.cc  DrawableLayerLinux.h
Notation-Sourcecode/Backend/MacOS/: DrawableContextMacOS.h  DrawableContextMacOS.mm  DrawableLayerFactoryMacOS.h  DrawableLayerFactoryMacOS.mm  DrawableLayerMacOS.h  (+3 more)
Notation-Sourcecode/Clipboard/: Clipboard.cc  Clipboard.h
Notation-Sourcecode/Commands/: AddArpeggiateCommand.cc  AddArpeggiateCommand.h  AddMarkCommand.cc  AddMarkCommand.h  AddTemporalToBeamCommand.cc  AddTemporalToBeamCommand.h  AdditionalBeam.cc  AdditionalBeam.h  BarlinesCommand.cc  BarlinesCommand.h  BeamStrokeCommand.cc  BeamStrokeCommand.h  ChangeTimeSignatureCommand.cc  ChangeTimeSignatureCommand.h  ChordStateCommand.cc  ChordStateCommand.h  ClipboardPasteItemsCommand.cc  ClipboardPasteItemsCommand.h  ClipboardPasteRangeCommand.cc  ClipboardPasteRangeCommand.h  Command.cc  Command.h  CommandFactory.cc  CommandFactory.h  CommandIntf.cc  CommandIntf.h  CommandResult.cc  CommandResult.h  DeleteBeamCommand.cc  DeleteBeamCommand.h  DeleteChordCommand.cc  DeleteChordCommand.h  DeleteCurveCommand.cc  DeleteCurveCommand.h  DeleteItemCommand.cc  DeleteItemCommand.h  DeleteItemsCommand.cc  DeleteItemsCommand.h  DeleteMarkCommand.cc  DeleteMarkCommand.h  (+51 more)
Notation-Sourcecode/Config/: InstrumentConfig.cc  InstrumentConfig.h  ResourceFilepathProviderIntf.h  SoundCollection.cc  SoundCollection.h  SoundResource.cc  SoundResource.h
Notation-Sourcecode/Core/: Constants.h  CurrentState.h  Forward.h  Iterators.h  LRUCache.h  Logging.cc  Logging.h  Preferences.cc  Preferences.h  StringViewComparator.h  ThreadPool.h  Throw.h  Unused.h  Uuid.h  Version.cc  Version.h  VersionConstants.h
Notation-Sourcecode/File/: FileLoadResult.cc  FileLoadResult.h  FileMediatorFactory.cc  FileMediatorFactory.h  FileMediatorIntf.h  FileMessage.h  FileSaveResult.cc  FileSaveResult.h
Notation-Sourcecode/Fonts/: FontManager.cc  FontManager.h  FontTheme.cc  FontTheme.h
Notation-Sourcecode/MusicXML/: MxBeamSpanner.cc  MxBeamSpanner.h  MxChordConverter.cc  MxChordConverter.h  MxClef.cc  MxClef.h  MxConverter.cc  MxConverter.h  MxCurveStack.h  MxDynamicsReader.cc  MxDynamicsReader.h  MxEndingCollector.cc  MxEndingCollector.h  MxFile.cc  MxFile.h  MxFileMediator.cc  MxFileMediator.h  MxLocation.cc  MxLocation.h  MxMark.cc  MxMark.h  MxMeasureReader.cc  MxMeasureReader.h  MxMeasureWriter.cc  MxMeasureWriter.h  MxNoteReader.cc  MxNoteReader.h  MxNoteSpanner.cc  MxNoteSpanner.h  MxNoteWriter.cc  MxNoteWriter.h  MxOttava.cc  MxOttava.h  MxPartWriter.cc  MxPartWriter.h  MxScoreReader.cc  MxScoreReader.h  MxScoreWriter.cc  MxScoreWriter.h  MxSpannerCollector.cc  (+20 more)
Notation-Sourcecode/Notation/: AboveBelow.h  AccidentalType.h  ArpeggiateType.h  BarlineType.h  BeatGrouping.cc  BeatGrouping.h  BeatUnit.cc  BeatUnit.h  ChordHead.cc  ChordHead.h  ChordNote.cc  ChordNote.h  ChordSymbolEnums.cc  ChordSymbolEnums.h  ChordSymbolExtension.cc  ChordSymbolExtension.h  ChordSymbolSemantics.cc  ChordSymbolSemantics.h  ChordSymbolValue.cc  ChordSymbolValue.h  ChordType.h  ClefType.h  CurveParams.h  Draggable.cc  Draggable.h  DrawResult.h  Duration.cc  Duration.h  DurationCount.cc  DurationCount.h  EndingParams.h  Geometry.cc  Geometry.h  GroupBracketType.h  Instrument.cc  Instrument.h  InstrumentOrder.h  KeySignatureType.cc  KeySignatureType.h  LockTypes.h  (+59 more)
Notation-Sourcecode/Score/: Engraver.cc  Engraver.h  Score.cc  Score.h  ScoreColors.cc  ScoreColors.h  ScoreCreationInfo.cc  ScoreCreationInfo.h  ScoreLayout.cc  ScoreLayout.h  ScoreLayoutInfo.h  ScoreObserver.h  StaffSystem.cc  StaffSystem.h
Notation-Sourcecode/Tests/: main.cc
Notation.xcodeproj/: .gitattributes  project.pbxproj
NotationLinux/: CMakeLists.txt
NotationOSX/: Info.plist  NotationOSX_Prefix.pch
NotationiOS/: NotationiOS_Prefix.pch
Resources/Config/: instruments.json
Resources/Nibs/: LaunchScreen.storyboard
TestApp/App/Linux/: CMakeLists.txt  Haydn.xml  README.md  TestFileRepository.cc  main.cc
TestApp/Cpul/: cpulFailure.cpp  cpulFailure.h  cpulTest.cpp  cpulTest.h  cpulTestHarness.h  cpulTestRegistry.cpp  cpulTestRegistry.h  cpulTestResult.cpp  cpulTestResult.h  cpulTestTimer.h
TestApp/TestSupport/: MxTest.h  MxTest.mm  RoundTrip.h  TestBridge.h  TestBridge.mm  TestControl.h  TestController.cc  TestController.h  TestFile.cc  TestFile.h  TestFileRepository.h  TestFileRepository.mm  TestHelpers.h  TestMenuItem.h  TestMenuItem.m  TestNoteFactory.h
TestApp/Tests/: AttachedItemScore.h  AttachedItemTest.cc  BarlineTest.cc  BasicScore.h  BeamFactoryTest.cc  BeamLineTest.cc  BeamSaveScores.h  BeamSaveTest.cc  BeamSpecTest.cc  BeamTest.cc  BeamTestScores.h  BeamedNoteTest.cc  BeatGroupingTest.cc  BombeTest.cc  BombeTest.h  BracketTest.cc  BracketTest.h  ChordHeadTest.cc  ChordScore.h  ChordSymbolRepository.cc  ChordSymbolRepository.h  ChordSymbolScores.h  ChordSymbolTest.cc  ChordSymbolValueTest.cc  ChordTest.cc  CurveScores.h  CurveTest.cc  FermataTest.cc  FermataTestScore.h  FileLoadResultTest.cc  InstrumentConfigTest.cc  InstrumentTest.cc  KeySignatureTest.cc  LoadAllFilesTest.cc  LordChordTest.cc  MarkPositionTest.cc  MeasureTest.cc  MxClefTest.cc  MxConversionsTest.cc  MxDirectionTest.cc  (+23 more)
(+274 files in other folders)
